--- a/sweeps/pt/math_144gb_1xOT/model=qwen3-1.44B-1xOT.yaml
+++ b/sweeps/pt/math_144gb_1xOT/model=qwen3-1.44B-1xOT.yaml
@@ -21,7 +21,7 @@ parameters:
       benchmark_subset_fraction:
         values: [ 1.0, 0.01, 0.1, 0.001 ]
       num_benchmark_replicas_per_epoch:
-        values: [0, 316, 1, 100, 10, 32, 1000, 3]
+        values: [0, 316, 1, 100, 10, 32, 1000, 3, 3162]
       shuffle_seed:
         values: [0]
   model_config:
