--- a/sweeps/pt/math_144gb_1xOT/model=qwen3-344M-1xOT.yaml
+++ b/sweeps/pt/math_144gb_1xOT/model=qwen3-344M-1xOT.yaml
@@ -21,7 +21,7 @@ parameters:
       benchmark_shuffle_seed:
         values: [ 0 ]
       num_benchmark_replicas_per_epoch:
-        values: [0, 316, 1, 100, 10, 32, 1000, 3]
+        values: [0, 316, 1, 100, 10, 32, 1000, 3, 3162]
       shuffle_seed:
         values: [0]
   model_config:
