--- a/sweeps/pt/math_82gb_1xOT/model=qwen3-806M-1xOT.yaml
+++ b/sweeps/pt/math_82gb_1xOT/model=qwen3-806M-1xOT.yaml
@@ -16,12 +16,12 @@ parameters:
         values: ["fineweb-edu-dedup"]
       benchmark:
         values: [ "EleutherAI/minerva_math" ]
+      benchmark_subset_fraction:
+        values: [ 1.0, 0.01, 0.1, 0.001, 0.3162, 0.03162, 0.003162  ]
       benchmark_shuffle_seed:
         values: [ 0 ]
-      benchmark_subset_fraction:
-        values: [ 1.0, 0.01, 0.1, 0.001 ]
       num_benchmark_replicas_per_epoch:
-        values: [0, 316, 1, 100, 10, 32, 1000, 3]
+        values: [0, 316, 1, 100, 10, 32, 1000, 3, 3162]
       shuffle_seed:
         values: [0]
   model_config:
